# investi-graph-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: e5de58d8126c_replace_document_text_with_chunks_and_.py
app/: __init__.py  config.py  crud.py  database.py  knowledge_graph.py  main.py  models.py  processing.py  schemas.py  sec_service.py  security.py
backend/: Dockerfile  docker-compose.yml  ex_query_all_doc.md  requirements.txt  verify_refactor.py
backend/alembic/: env.py
backend/alembic/versions/: 2fdd0ac7a7d1_create_users_table.py  99054735466c_add_documents_table.py  e3c1d746f0c4_enable_cascade_delete_for_chunks.py
backend/app/: config.py  crud.py  database.py  dependencies.py  main.py  processing.py  schemas.py  security.py  utils.py
backend/app/controllers/: auth_controller.py  document_controller.py  user_controller.py
backend/app/middlewares/: cors.py  logging.py
backend/app/routers/: auth.py  documents.py  users.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Login.jsx  SignUp.jsx
frontend/src/services/: api.js
