[project]
name = "investi-graph"
version = "0.1.0"
description = "A project to showcase Full-stack development and AI engineering skills"
authors = [
    {name = "Haseef2005"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
name = "investi-graph"
version = "0.1.0"
description = "A project to showcase Full-stack development and AI engineering skills"
authors = ["Haseef2005"]
readme = "README.md"
packages = [{include = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
